--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^5.2.4",
+    "@clerk/clerk-react": "^5.48.1",
+    "@google/genai": "^1.21.0",
     "@google/generative-ai": "^0.12.0",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
